--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; 
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test 
       run: |
         python python.py
